kubernetes/apps/default/zot/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zot
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: zot
subsets:
  - addresses:
      - ip: ${REBOST_IP}
    ports:
      - name: http
        port: 5000
        protocol: TCP
